# Standalone-Interactive-Classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
.github/workflows/: run-tests.yml
api/: README.md  pyproject.toml
api/src/ic_api/: __init__.py  main.py  schemas.py  store.py
api/tests/: test_api.py
core/data/test/: image_hfn_sample_annotations.json
core/data/train/: Hufnagel-example.csv  csv-hufnagel_neume_level_newest.csv  csv-square_notation_neume_level_newest.csv  csv_hufnagel_neume_level_newest.csv  hufnagel_annotations_826dd1b4.csv  hufnagel_annotations_a77ec16f.csv
core/ic_core/: pyproject.toml
core/ic_core/src/ic_core/: __init__.py  classifier.py  evaluation.py  feature_extractor.py  features.py  glyph.py  grouping.py  image.py  ingest.py  io_xml.py  nn_classifier.py  normalize.py  splitting.py  state.py
core/scripts/: convert_hufnagel_csv.py  crop_music.py  evaluate.py  paths.py  rename_hufnagel_pairs.py  run_evaluation.py  run_pipeline.py  train_vit_adapter_ssf.py  train_vit_lora.py  visualize.py  visualize_train.py
core/tests/: conftest.py  test_classifier.py  test_features.py  test_grouping.py  test_ingest.py  test_io_xml.py  test_io_xml_writer.py  test_normalize.py  test_real_input_knn.py  test_splitting.py  test_state.py
core/tests/sample_input/: evaluate.py  (+3 more)
docs/: CLAUDE.md  KNN_ALGORITHM.md  STAGES_IO_old.md  USER_MANUAL.md  feature_normalization_experiment.md  migration_plan.md  square_neume_mapping.numbers
frontend/: .gitignore  PLAN.md  biome.json  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+56 files in other folders)
