[project]
name = "ic-api"
version = "0.1.0"
description = "FastAPI service for the Interactive Classifier"
readme = "README.md"
authors = [
    { name = "Yueqiao Zhang", email = "yueqiao.zhang@mail.mcgill.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    # Required by FastAPI's UploadFile/Form parsing for the
    # multipart POST /sessions endpoint.
    "python-multipart>=0.0.20",
    "ic-core",
]

[project.scripts]
ic-api = "ic_api.main:run"

[tool.uv.sources]
# Use the sibling core package directly during dev so changes there
# are picked up without re-publishing.
ic-core = { path = "../core/ic_core", editable = true }

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.12",
]
