[project]
name = "ic-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yueqiao Zhang", email = "yueqiao.zhang@mail.mcgill.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.scripts]
ic-core = "ic_core:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
